# palindrl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: ignorechars_smoke.pt  masked_smoke.pt  phase_smoke_1.pt  phase_smoke_2.pt  policy-2.pt  policy.pt  ppo_smoke.pt  proc_metrics_smoke.pt  proc_metrics_smoke2.pt  procedural_balance_smoke.pt  procedural_smoke.pt
palindrl/: __init__.py  main.py  model.py  play.py  tokenizer.py  train.py
palindrl/environment/: __init__.py  palindrome_env.py
runs/ignorechars_smoke/: events.out.tfevents.1777340370.Mac.56877.0
runs/masked_smoke/: events.out.tfevents.1777336219.Mac.27229.0
runs/palindrl/: events.out.tfevents.1777334782.Mac.21674.0  events.out.tfevents.1777335378.Mac.8516.0  events.out.tfevents.1777335642.Mac.44275.0  events.out.tfevents.1777335725.Mac.57498.0  events.out.tfevents.1777335800.Mac.69216.0  events.out.tfevents.1777335871.Mac.78314.0  events.out.tfevents.1777336225.Mac.28251.0  events.out.tfevents.1777336255.Mac.32473.0  events.out.tfevents.1777341075.Mac.46305.0  events.out.tfevents.1777341752.Mac.31577.0  events.out.tfevents.1777342422.Mac.26935.0  events.out.tfevents.1777343456.Mac.64671.0  events.out.tfevents.1777343465.Mac.65852.0  events.out.tfevents.1777344231.Mac.68018.0  events.out.tfevents.1777350601.Mac.74358.0  events.out.tfevents.1777351267.Mac.69166.0
runs/phase_smoke_1/: events.out.tfevents.1777343649.Mac.90570.0
runs/phase_smoke_2/: events.out.tfevents.1777343660.Mac.92266.0
scripts/: deploy_space.sh
space/: README.md  app.py
(+6 files in other folders)
