[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "palindrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.13.0",
    "gymnasium>=1.2.1",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
]

[project.scripts]
palindrl-tokenizer = "palindrl.tokenizer:main"
palindrl-train = "palindrl.train:main"
palindrl-play = "palindrl.play:main"

[tool.hatch.build.targets.wheel]
packages = ["palindrl"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
